--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "d3": "^7.8.5",
