--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "d3": "^7.8.5",
+    "openai": "^4.28.0",
     "pdfjs-dist": "^4.0.379",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
